fix: fixed header button spacing

--- a/theme/components/_page-header.scss
+++ b/theme/components/_page-header.scss
@@ -51,7 +51,7 @@
         margin: 0;
 
         a, .btn, .controls {
-            margin: $global-padding ($global-padding/1.5);
+            margin: ($global-padding/1.5);
         }
     }
 }
